--- a/GuardedCommands/GuardedCommands.fsproj
+++ b/GuardedCommands/GuardedCommands.fsproj
@@ -11,6 +11,8 @@
     <AssemblyName>GuardedCommands</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <Name>GuardedCommands</Name>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,15 +36,27 @@
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
+  <Choose>
+    <When Condition="'$(VisualStudioVersion)' == '11.0'">
+      <PropertyGroup>
+        <FSharpTargetsPath>$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets</FSharpTargetsPath>
+      </PropertyGroup>
+    </When>
+    <Otherwise>
+      <PropertyGroup>
+        <FSharpTargetsPath>$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\FSharp\Microsoft.FSharp.Targets</FSharpTargetsPath>
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
+  <Import Project="$(FSharpTargetsPath)" Condition="Exists('$(FSharpTargetsPath)')" />
   <PropertyGroup>
-    <PreBuildEvent>fslex "$(ProjectDir)Lexer.fsl"
-fsyacc -v  --module Parser "$(ProjectDir)Parser.fsy"</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AST.fs" />
-    <None Include="Parser.fsy" />
-    <None Include="Lexer.fsl" />
+    <FsYacc Include="Parser.fsy" />
+    <FsLex Include="Lexer.fsl" />
     <Compile Include="Parser.fs" />
     <Compile Include="Lexer.fs" />
     <Compile Include="TypeCheck.fs" />
@@ -74,13 +88,19 @@ fsyacc -v  --module Parser "$(ProjectDir)Parser.fsy"</PreBuildEvent>
     <None Include="factImpPTyp.gc" />
     <None Include="QuickSortV2.gc" />
     <None Include="par2.gc" />
+    <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
-      <HintPath>bin\Debug\FSharp.Core.dll</HintPath>
+      <HintPath>..\packages\FSharp.Core.3.1.2.5\lib\net40\FSharp.Core.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.PowerPack">
       <HintPath>bin\Debug\FSharp.PowerPack.dll</HintPath>
+    </Reference>
+    <Reference Include="FsLexYacc.Runtime">
+      <HintPath>..\packages\FsLexYacc.Runtime.7.0.3\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid10+MonoTouch10\FsLexYacc.Runtime.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Machine">
       <HintPath>bin\Debug\Machine.dll</HintPath>
@@ -93,6 +113,17 @@ fsyacc -v  --module Parser "$(ProjectDir)Parser.fsy"</PreBuildEvent>
       <HintPath>bin\Debug\virtualMachine.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <Import Project="..\packages\FsLexYacc.7.0.3\build\FsLexYacc.targets" Condition="Exists('..\packages\FsLexYacc.7.0.3\build\FsLexYacc.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\FsLexYacc.7.0.3\build\FsLexYacc.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\FsLexYacc.7.0.3\build\FsLexYacc.targets'))" />
+  </Target>
+  <PropertyGroup>
+    <PreBuildEvent>"C:\Users\Helge\git\GuardedCommands\packages\FsLexYacc.7.0.3\build\fslex.exe" "$(ProjectDir)Lexer.fsl"
+"C:\Users\Helge\git\GuardedCommands\packages\FsLexYacc.7.0.3\build\fsyacc.exe" --module Parser "$(ProjectDir)Parser.fsy"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
