Tests and CodeOpt

--- a/GuardedCommands/GuardedCommands.fsproj
+++ b/GuardedCommands/GuardedCommands.fsproj
@@ -63,6 +63,10 @@
     <Compile Include="CodeGen.fs" />
     <Compile Include="CodeGenOpt.fs" />
     <Compile Include="Util.fs" />
+    <None Include="B2.gc" />
+    <None Include="A11.gc" />
+    <None Include="nqueens.gc" />
+    <None Include="Ex12.gc" />
     <None Include="Ex9.gc" />
     <None Include="Tests.fsx" />
     <None Include="QuickTest.gc" />
@@ -75,24 +79,35 @@
     <None Include="Ex5.gc" />
     <None Include="Ex6.gc" />
     <None Include="Skip.gc" />
-    <None Include="fact.gc" />
     <None Include="factCBV.gc" />
     <None Include="factRec.gc" />
-    <None Include="A0.gc" />
     <None Include="A1.gc" />
     <None Include="A2.gc" />
     <None Include="A3.gc" />
-    <None Include="A4.gc" />
     <None Include="Swap.gc" />
     <None Include="QuickSortV1.gc" />
     <None Include="par1.gc" />
     <None Include="factImpPTyp.gc" />
     <None Include="par2.gc" />
     <Content Include="packages.config" />
-    <None Include="QuickSortV2.gc" />
     <None Include="Ex7.gc" />
     <None Include="Script.fsx" />
+    <None Include="QuickSortV2.gc" />
+    <None Include="QuickSortV3.gc" />
+    <None Include="A4.gc" />
+    <None Include="A5.gc" />
+    <None Include="A0.gc" />
+    <None Include="B0.gc" />
+    <None Include="B1.gc" />
     <None Include="Ex8.gc" />
+    <None Include="Ex10.gc" />
+    <None Include="Ex11.gc" />
+    <None Include="A6.gc" />
+    <None Include="A7.gc" />
+    <None Include="A8.gc" />
+    <None Include="A9.gc" />
+    <None Include="A10.gc" />
+    <None Include="fact.gc" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
